FORs -> STREAMs, command line arguments handling, added singleton, more clean-up

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
 
     <properties>
         <java.version>12</java.version>
+        <start-class>app.Application</start-class>
     </properties>
 
     <repositories>
@@ -97,4 +98,26 @@
             <url>https://jitpack.io</url>
         </repository>
     </repositories>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>spring-boot</classifier>
+                            <mainClass>
+                                app.Application
+                            </mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
