--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>BrowserLauncher2</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.0-jre</version>
+        </dependency>
     </dependencies>
 
 
